[gd_scene load_steps=17 format=3 uid="uid://v3la144kw4ja"]

[ext_resource type="Theme" uid="uid://57ygx1bt32mq" path="res://scenes/ui/common/pixel_theme.tres" id="1_jk7nv"]
[ext_resource type="Script" uid="uid://7fl8li7pa5f5" path="res://scenes/levels/main_menu.gd" id="2_dhmlp"]
[ext_resource type="Shader" uid="uid://cttr8k0ekr7kt" path="res://scenes/ui/menus/shader_scripts/nebula.gdshader" id="3_ykpw6"]
[ext_resource type="Texture2D" uid="uid://bkm57v3dlup75" path="res://icon.svg" id="4_h4dpu"]
[ext_resource type="Shader" uid="uid://dhr6udene0d8f" path="res://scenes/ui/menus/shader_scripts/stars.gdshader" id="5_nmbxx"]
[ext_resource type="Shader" uid="uid://co6oiedn86b3w" path="res://scenes/ui/menus/shader_scripts/front.gdshader" id="6_bl8wb"]
[ext_resource type="FontFile" uid="uid://dmqpm86c380kf" path="res://scenes/ui/common/fonts/PixelifySans-VariableFont_wght.ttf" id="7_c8e1o"]
[ext_resource type="AudioStream" uid="uid://bi4oubfnudqr3" path="res://scenes/ui/menus/MenuMusic/adventure_free .wav" id="8_e7y46"]
[ext_resource type="AudioStream" uid="uid://br8iwx4wsnjni" path="res://assets/audio/game_start.wav" id="11_bl8wb"]
[ext_resource type="PackedScene" uid="uid://mtp2xs4dduqi" path="res://scenes/levels/level_music.tscn" id="12_c8e1o"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cn35j"]
shader = ExtResource("3_ykpw6")
shader_parameter/speed = 0.01
shader_parameter/strength = 0.4
shader_parameter/fog_color = Color(0.15, 0.1, 0.2, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sn5u3"]
shader = ExtResource("5_nmbxx")
shader_parameter/particle_color = Color(0.4, 0.8, 1, 1)
shader_parameter/glow_color = Color(0.8, 0.3, 1, 1)
shader_parameter/particle_speed = 1.0
shader_parameter/particle_density = 8.0
shader_parameter/sparkle_intensity = 1.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wko7x"]
shader = ExtResource("6_bl8wb")
shader_parameter/speed = 0.02
shader_parameter/density = 25.0
shader_parameter/intensity = 0.6
shader_parameter/spark_color = Color(1, 0.8, 0.4, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_geflf"]
bg_color = Color(0.78431374, 0.5294118, 0.16470589, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.22745098, 0.16470589, 0.078431375, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fkd6t"]
bg_color = Color(0.6117647, 0.40392157, 0.101960786, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_keln3"]
bg_color = Color(0.8666667, 0.6862745, 0.36862746, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_jk7nv")
script = ExtResource("2_dhmlp")

[node name="MainBackground" type="ColorRect" parent="."]
z_index = -10
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.060409427, 0.08165094, 0.16590062, 1)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer (shader_background)" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.02, 1)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer (shader_background)"]
z_index = 1
material = SubResource("ShaderMaterial_cn35j")
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4_h4dpu")

[node name="ParallaxLayer (middle)" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 1)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer (middle)"]
material = SubResource("ShaderMaterial_sn5u3")
offset_left = -1.0
offset_right = 1279.0
offset_bottom = 720.0
texture = ExtResource("4_h4dpu")
metadata/_edit_use_anchors_ = true

[node name="ParallaxLayer (front)" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.25, 1)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer (front)"]
material = SubResource("ShaderMaterial_wko7x")
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("4_h4dpu")

[node name="TitleContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 325.0
offset_right = 965.0
offset_bottom = 360.0
grow_horizontal = 2

[node name="GameTitle" type="Label" parent="TitleContainer"]
modulate = Color(0.9607843, 0.827451, 0.54509807, 1)
z_index = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.9607843, 0.827451, 0.54509807, 1)
theme_override_colors/font_outline_color = Color(0.22745098, 0.16470589, 0.078431375, 1)
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("7_c8e1o")
theme_override_font_sizes/font_size = 120
text = "Mage Race"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsContainer" type="VBoxContainer" parent="."]
modulate = Color(1.2237577, 1.2237577, 1.2237577, 1)
top_level = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.5
offset_top = -40.0
offset_right = 81.5
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="ButtonsContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_geflf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fkd6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_keln3")
text = "Start"

[node name="QuitButton" type="Button" parent="ButtonsContainer"]
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_geflf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_fkd6t")
theme_override_styles/hover = SubResource("StyleBoxFlat_keln3")
text = "Quit"

[node name="Audio" type="Node2D" parent="."]

[node name="menu_music" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("8_e7y46")
volume_db = -20.0
autoplay = true

[node name="start_button" type="AudioStreamPlayer2D" parent="Audio"]
stream = ExtResource("11_bl8wb")

[node name="LevelMusic" type="Node2D" parent="."]

[node name="level_music" parent="LevelMusic" instance=ExtResource("12_c8e1o")]
